# typing-v2

./: .air.toml  .dockerignore  .env  .gitignore  1qa  CLAUDE.md  Cargo.toml  Dockerfile  README.md  database.db  docker-compose-dev.yml  docker-compose.yml  go.mod  go.sum  main.go  seed.sql  tailwind.config.js  tsconfig.json
backend/: Cargo.toml  Dockerfile
backend/.sqlx/: query-07d7259995962c236063281d99255bcd2e90198b4a0977ec841b7a0aa9c64e26.json  query-0fcb3b4c602fdbf08b0ba2c8b2081e9415c708bc89b42854c33461f057f7de73.json  query-11063f784b4b4930395fa1bd357222a0a4e29b4226cf9038ed487ca3cb4a588a.json  query-230abc2a8cd9697ff7d8e57e306adb63d23bf5e748bae6067f7d9cb4629c1b39.json  query-24d4af4d5a0a85ef431ecf78472517c8a985637e0c62fdbfd1b18323cde7b506.json  query-251095b72bf8ec92618da80620e2fa8d8e7fe569ff19f910f6a161f4a37315cf.json  query-2e6948ad5167607065e045e6277f8b81bfdc57ff7355b6bdabf6b29bbc9e6d48.json  query-39ce5bc93335d2abb8ab8ad1a572b179fb1a7db91000293ff7a7eeadc2f11449.json  query-3a38028c6e4aee3e86e3c75d94858a0ae23b67ea6aee7e4a8dc50faaef750810.json  query-512c6abd87540b7cca9acbf6791fe4d9e093d6753bdd83b9800638d6d7d730c1.json  query-52ecbacb2306d818b6f011df090c52d5fad527b10555dd54aa5e67023efa3d0b.json  query-559f2f76c1312a8907cedd5f900d1cab7d480d018f526b5919a3d2cc00fe681d.json  query-5b64bbe84a857dad0faa4884e119d7e149aff97d66b3057577241d591637c236.json  query-5f6fe2ecac867eac8d9f1e2709178f6802b68b81584d5d030835a29b5f1aa670.json  query-6125a7d272dd7a8a6777dfcf1b4e1fd5f7b41d74b7d967718debd1c016b514fa.json  query-72bdcc1c7c30313a18fb439969952232bcf52d376926bf676a70fdb87432207d.json  query-72f10f0524453b610d9ba58ee6c4b406458d556e9ce45724d1300077d1941915.json  query-8d4bd17865e6866a13136023e2f9af1c358e68233b171bcc4cab3e2cc1c2a887.json  query-92feee02e72ecce4806581d77d47dd37973893c42afb3dc989d65305c3a47992.json  query-b1b38759748b3c94a7e6873f984ca522320b2e24099d1e78ad3bf0017e1523ff.json  query-b45d6fb97f547f5b8539f916705382690cb581e8bc8ca603f1125eb91764dc5e.json  query-b6743532ba91f56227471565453ead3136c6a2cf88a30b3d68b8d8182cff351d.json  query-d2d17ffdd494fed38d093eb45af362b0ff5a9e43ba82976cebd63242ffd24202.json  query-da42ca67fe987f3441ebbe86bfc3570b07eb75489baa78f20b3324084085f2b8.json  query-dd0020e6424873820b06fb5401710be9d0a9dd519343f9d10347ccf3e7fa3621.json  query-e37fe93b9bae5eae067134e3c112006e95996d49bc7a9b5c94f1c73a2489fa04.json  query-e40819d05c55553dc21e1d72cc1f7e9e32d9d38a83013be66f6fab23a8379fc0.json  (+2 more)
backend/src/: authentication.rs  main.rs  (+6 more)
(+151 files in other folders)
