[package]
name = "typing2"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.9", features = ["macros"] }
actix-multipart = "0.7"
serde = { version = "1.0.209", features = ["derive"] }
tokio = { version = "1.40", features = ["full"] }
serde_json = "1.0.127"
sqlx = { version = "0.8.1", features = [
  "runtime-tokio",
  "postgres",
  "uuid",
  "tls-rustls-ring",
] }
uuid = "1.10"
askama = "0.12.1"
actix-files = "*"
env_logger = "0.11"
log = "0.4.22"
dotenv = "0.15.0"
anyhow = "1.0.86"
