[package]
name = "typing2"
version = "0.2.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.9", features = ["macros", "rustls"] }
serde = { version = "1.0.209", features = ["derive"] }
tokio = { version = "1.40", features = ["full"] }
serde_json = "1.0.127"
sqlx = { version = "0.8.1", features = [
    "runtime-tokio",
    "uuid",
    "tls-rustls-ring",
    "sqlite",
    "chrono",
] }
rustls = "0.23.14"
uuid = { version = "1.10", features = ["serde", "v4"] }
env_logger = "0.11"
log = "0.4.22"
dotenv = "0.15.0"
anyhow = "1.0.86"
awc = { version = "3.5.1", features = ["rustls-0_23"] }
webpki-roots = "0.26"
rand = "0.8.5"
thiserror = "2.0.3"
chrono = { version = "0.4.41", features = ["serde"] }
secrecy = { version = "0.10.3", features = ["serde"] }
